@@ -29,8 +29,8 @@ has url_to_link => sub {
     'google'             => 'LinkEmbedder::Link::Google',
     'goo.gl'             => 'LinkEmbedder::Link::Google',
     'imgur.com'          => 'LinkEmbedder::Link::Imgur',
+    'instagram.com'      => 'LinkEmbedder::Link::Instagram',
     'ix.io'              => 'LinkEmbedder::Link::Ix',
-    'instagram.com'      => 'LinkEmbedder::Link::oEmbed',
     'metacpan.org'       => 'LinkEmbedder::Link::Metacpan',
     'nhl.com'            => 'LinkEmbedder::Link::NHL',
     'paste.opensuse.org' => 'LinkEmbedder::Link::OpenSUSE',
