@@ -7,8 +7,8 @@ plan skip_all => 'cpanm IO::Socket::SSL' unless LinkEmbedder::TLS;
 
 LinkEmbedder->new->test_ok(
   'https://www.instagram.com/p/C/' => {
-    isa              => 'LinkEmbedder::Link::oEmbed',
-    html             => qr{instagram-media},
+    isa              => 'LinkEmbedder::Link::Instagram',
+    html             => qr{<iframe class="le-rich le-provider-instagram".*src="https://www\.instagram\.com/p/C/embed"},
     thumbnail_url    => qr{/11142282_807944772625369_492138085_n\.jpg},
     author_name      => 'kevin',
     author_url       => 'https://www.instagram.com/kevin',
@@ -27,8 +27,8 @@ LinkEmbedder->new->test_ok(
 
 LinkEmbedder->new->test_ok(
   'https://www.instagram.com/p/CFOCg0shCqz/' => {
-    isa              => 'LinkEmbedder::Link::oEmbed',
-    html             => qr{instagram-media},
+    isa  => 'LinkEmbedder::Link::Instagram',
+    html => qr{<iframe class="le-rich le-provider-instagram".*src="https://www\.instagram\.com/p/CFOCg0shCqz/embed"},
     thumbnail_url    => qr{/119498171_1255132661505212_1788503835285257132_n.jpg},
     author_name      => 'fuglenasakusa',
     author_url       => 'https://www.instagram.com/fuglenasakusa',
