@@ -6,6 +6,7 @@ Revision history for perl distribution LinkEmbedder
  - Fix parsing pastebini.com links
  - Fix parsing xkcd.com links
  - Add support for Facebook video #9
+ - Add support for Instagram photos inside iframe #15
  - Add support for rendering GitHub source code #16
  - Add support for extracting "application/ld+json" information
  - Add support for paste.centos.org (replaced fedoraproject paste)
